--- a/views/test-client.ejs
+++ b/views/test-client.ejs
@@ -20,10 +20,16 @@
     const form = document.getElementById('message-form');
 
     form.addEventListener('submit', (e) => {
+      e.preventDefault();
+
       const msgInput = document.getElementById('message-input');
 
       socket.emit('message', msgInput.value)
     });
+
+    socket.on('message', (message) => {
+      console.log(`Mensagem recebida: ${message}`);
+    })
   </script>  
 </body>
 </html>
