Req 1 finished - Implements Server side socket connection

--- a/views/test-client.ejs
+++ b/views/test-client.ejs
@@ -26,12 +26,12 @@
 
       socket.emit('message', {
         chatMessage: msgInput.value,
-        nickName: 'abc',
+        nickname: 'abc',
       })
     });
 
     socket.on('message', (message) => {
-      console.log(`Mensagem recebida: ${message}`);
+      console.log(`${message}`);
     })
   </script>  
 </body>
