change to index to ejs format, added  formatData method rename socket

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+<html lang="en"></html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Chat- Trybe</title>
     <link rel="stylesheet" href="./css/chat.css">
   </head>
@@ -10,6 +14,6 @@
       <input id="messageInput" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
-    <script src='./js/chat.js'></script>
+    <script src='./js/chatClient.js'></script>
   </body>
 </html>
