--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,16 @@
 <html>
   <head>
     <title>Webchat</title>
+    <link rel="stylesheet" href="../css/chat.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js ."></script>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Vini Webchat</h1>
+    <ul id="messages"></ul>
+    <form action="">
+      <input id="messageInput" autocomplete="off" /><button>Send</button>
+    </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+    <script src='../scripts/chat.js'></script>
   </body>
 </html>
