--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,46 +1,42 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font: 13px Helvetica, Arial;
 }
 
 form {
-  background: #000;
+  background: black;
+  bottom: 0;
   padding: 3px;
   position: fixed;
-  bottom: 0;
   width: 100%;
 }
 
 form input {
   border: 0;
+  margin-right: 0.5%;
   padding: 10px;
   width: 90%;
-  margin-right: 0.5%;
 }
 
 form button {
-  width: 9%;
   background: rgb(130, 224, 255);
   border: none;
-  padding: 10px;
   cursor: pointer;
+  padding: 10px;
+  width: 9%;
 }
 
-#messages {
+.chat {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0%;
+  padding: 0%;
 }
 
-#messages li {
+.chat li {
   padding: 5px 10px;
 }
 
-#messages li:nth-child(odd) {
-  background: #eee;
+.chat li:nth-child( odd ) {
+  background: rgb(102, 80, 101);
 }
