--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,6 +11,10 @@
 <body>
   <main class="container">
     <section class="messages-list">
+      <% chat.forEach((item) => { %>
+        <% const { nickname, message, timestamp } = item; %>
+          <p data-testid="message"> <%=timestamp %> - <%= nickname %> : <%= message %> </p>
+    <%  }) %>
       </section>
       <div class="forms-container">
         <form action=" " class="nickname-box-container">
