--- a/public/css/webChat.css
+++ b/public/css/webChat.css
@@ -1,5 +1,6 @@
-body { 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+/* body {
+  font-family: -apple-system,
+  BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
   padding-bottom: 3rem;
 }
@@ -51,3 +52,4 @@ body {
 #messages > li:nth-child(odd) {
   background: #efefef;
 }
+ */
