--- a/public/views/webChat.ejs
+++ b/public/views/webChat.ejs
@@ -22,9 +22,9 @@
         </button>
       </div>
     </fieldset>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+    <ul class="messages" id="messages"></ul>
+    <form class="form" id="form" action="">
+      <input class="input" id="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src='./js/webChat.js'></script>
