fix lint styles

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -14,7 +14,7 @@
     <ul id="onlineUsers">
       <!-- <li id="nickName" data-testid="online-user"></li> -->
     </ul>
-    <ul id="messages">
+    <ul id="messages" class="messages">
     <li data-testid="message"></li>
     </ul>
     <form action="">
