--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font: 13px Heltica, Arial;
+  font: 1em/1.3 Times, serif, Apple Color Emoji;
 }
 
 form {
@@ -31,17 +31,17 @@ form button {
   width: 9%;
 }
 
-#messages {
+.messages {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-#messages li {
+li {
   padding: 5px 10px;
 }
 
-#messages li:nth-child( odd ) {
+li:nth-child( odd ) {
   background: #eee;
 }
 
