--- a/views/interface.ejs
+++ b/views/interface.ejs
@@ -13,7 +13,7 @@
     <div class="participants">
       <header><h2>Participantes do grupo</h2></header>
       <div>
-        <h3 id="username-name" data-testid="online-user"><%=username%></h3>
+        <h3 id="username-name"><%=username%></h3>
       </div>
       <div class="write-name">
         <form id="user">
