--- a/views/chatView.ejs
+++ b/views/chatView.ejs
@@ -20,6 +20,11 @@
   <main>
     <div>
       <ul id="msgs">
+        <% history.forEach(({ chatMessage, nickname, timestamp }) => { %>
+          <li data-testid="message">
+            <%= `${timestamp} - ${nickname}: ${chatMessage}` %>
+          </li>
+        <% }) %>
       </ul>
     </div>
   </main>
@@ -54,7 +59,7 @@
     };
 
     // Escutadores do socket
-    socket.on('defaultNick', (defaultNick) => {
+    socket.on('defaultNick', (defaultNick) => {      
       nickNameParent.innerText = defaultNick;
       sessionStorage.setItem('nickname', defaultNick);
     });
