Serve static files from public/

--- a/views/test-client.ejs
+++ b/views/test-client.ejs
@@ -14,25 +14,6 @@
   </form>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    
-    const form = document.getElementById('message-form');
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-
-      const msgInput = document.getElementById('message-input');
-
-      socket.emit('message', {
-        chatMessage: msgInput.value,
-        nickname: 'abc',
-      })
-    });
-
-    socket.on('message', (message) => {
-      console.log(`${message}`);
-    })
-  </script>  
+  <script src="/js/messages.js"></script>  
 </body>
 </html>
